Hot fix for spacing.

--- a/2011/src/stylesheets/screen.sass
+++ b/2011/src/stylesheets/screen.sass
@@ -116,3 +116,6 @@ header
 #sponsorinterest
   text-align:  center
   margin-top:  20px
+  
+.person
+  margin-bottom: 12px
